# emr-big-data-processing

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  iam_roles.json  main.py  pyproject.toml  requirements.txt
config/: aws_config.py  emr_config.json  env_loader.py
data/: dataset_reference.md
docs/: README.md  analysis_visualization.md  aws_integration.md  data_processing.md  environment_variables.md  index.md  pyspark_pyarrow_guide.md  running_scripts.md  setup_scripts.md  step_functions_comprehensive_guide.md  step_functions_execution_guide.md  troubleshooting.md  workflow.md
notebooks/: athena_queries.ipynb  data_exploration.ipynb
scripts/: create_emr_cluster.py  deploy_lambda_function.py  deploy_step_functions.py  execute_step_functions.py  lambda_start_glue_crawlers.py  run_spark_jobs.py  setup_aws_environment.py  setup_glue_crawlers.py  setup_iam_roles.ps1  setup_iam_roles.py  setup_iam_roles.sh  setup_s3.ps1  setup_s3.sh  setup_s3_bucket.py  terminate_emr_cluster.py
spark/: job1_vehicle_location_metrics.py  job2_user_transaction_analysis.py
step_functions/: data_pipeline_workflow.json
utils/: README.md  __init__.py  df_path.py  logging_config.py  read_csv_file.py  s3_path_utils.py  s3_utils.py
