[project]
name = "4-big-data-emr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.32",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyspark>=3.5.5",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
]
